--- a/index.html
+++ b/index.html
@@ -45,33 +45,42 @@ picture: me
 </script>
 
 Welcome!<br>
-I am currently a senior year undergraduate student from Department of Computer Science and Technology, Nanjing University, majoring in Computer Science. 
+I am currently a 1st year graduate student at UCLA, majoring in M.S. of Electrical & Computer Engineering.
+Previously, I got the degree of B.S. in Computer Science at Nanjing University (NJU). 
 
 <h4>Education Background</h4>
-09/2014 - 07/2019 (expected) <br>
+09/2019 - 06/2021 (expected) <br>
+<B>M.S. in Electrical & Computer Engineering, Department of Electrical & Computer Engineering, University of California, Los Angeles</B><br>
+
+09/2014 - 06/2019 <br>
 <B>B.S. in Computer Science, Department of Computer Science and Technology, Nanjing University</B><br>
 
 <br>
 
 <h4>Research Experience</h4>
-11/2018 - Present<br>
-<B>Geno: Enhancing web accessibility with auto-generated voice input </B> | Research Assistant<br>
-Advisor: Prof. Xiang Chen, at Electrical and Computer Engineering Department, UCLA<br>
+12/2018 - 01/2019, 09/2019 - Present<br>
+<B>UCLA HCI Research</B> <br>
+<B>Geno: Enhancing web accessibility with auto-generated voice input </B> <br>
+Advisor: Prof. Xiang Chen<br>
+
+<br>
+03/2019 - 05/2019<br>
+<B>NJU Distributed Computing Lab</B> <br>
+<B>Analyzing Mobile User Profile Based on Web Clickstreams</B> <br>
+Advisor: Prof. Wenzhong Li
 
 <br>
 07/2018 - 10/2018<br>
-<B>DNN Design Space Exploration</B> | Research Assistant<br>
-Advisor: Prof. Bei Yu, at Department of Computer Science and Engineering, CUHK<br>
+<B>The Chinese University of Hong Kong, Department of Computer Science and Engineering</B> <br>
+<B>DNN Design Space Exploration</B> |<br>
+Advisor: Prof. Bei Yu<br>
 
 <br>
 01/2018 - 05/2018<br>
-<B>3D Indoor Scene Understanding</B> | Research Assistant<br>
-Advisor: Prof. Yanwen Guo, at State Key Laboratory for Novel Software Technology, Nanjing University<br>
+<B>NJU Graphics Lab</B> <br>
+<B>3D Indoor Scene Understanding</B><br>
+Advisor: Prof. Yanwen Guo<br>
 
-<br>
-03/2017 - 12/2017<br>
-<B>Mobile User Portrait and Its Application for Cross-screen Tracking</B> | Project Member<br>
-Advisor: Prof. Wenzhong Li, at State Key Laboratory for Novel Software Technology, Nanjing University
 
 <br>
 
