--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ picture: me
       </address>
     </div>
     <div class="col-sm-4">
-      <a><span class="glyphicon glyphicon-envelope"></span></a> dingyunpeng@smail.nju.edu.cn<br/>
+      <a><span class="glyphicon glyphicon-envelope"></span></a> dyp1225@ucla.edu<br/>
       <a><span class="glyphicon glyphicon-envelope"></span></a> yunpengding.ln@gmail.com<br/>
       <!-- <a href="tel:+44-1316504430"><span class="glyphicon glyphicon-phone"></span>+44 131 650 4430</a><br/> -->
       <!-- <a href="http://scholar.google.com/citations?user=u4sxKZwAAAAJ"> -->
@@ -60,25 +60,26 @@ Previously, I got the degree of B.S. in Computer Science at Nanjing University (
 <h4>Research Experience</h4>
 12/2018 - 01/2019, 09/2019 - Present<br>
 <B>UCLA HCI Research</B> <br>
-<B>Geno: Enhancing web accessibility with auto-generated voice input </B> <br>
+Geno: Enhancing web accessibility with auto-generated voice input <br>
 Advisor: Prof. Xiang Chen<br>
 
 <br>
 03/2019 - 05/2019<br>
 <B>NJU Distributed Computing Lab</B> <br>
-<B>Analyzing Mobile User Profile Based on Web Clickstreams</B> <br>
+Analyzing Mobile User Profile Based on Web Clickstreams <br>
 Advisor: Prof. Wenzhong Li
+<br>
 
 <br>
 07/2018 - 10/2018<br>
 <B>The Chinese University of Hong Kong, Department of Computer Science and Engineering</B> <br>
-<B>DNN Design Space Exploration</B> |<br>
+DNN Design Space Exploration |<br>
 Advisor: Prof. Bei Yu<br>
 
 <br>
 01/2018 - 05/2018<br>
 <B>NJU Graphics Lab</B> <br>
-<B>3D Indoor Scene Understanding</B><br>
+3D Indoor Scene Understanding<br>
 Advisor: Prof. Yanwen Guo<br>
 
 
