layout change, linkedin add

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: clean
+layout: default
 title: Yunpeng Ding
 picture: me
 ---
@@ -13,14 +13,14 @@ picture: me
     <div class="col-sm-6">
       <address>
         <!-- <a href="https://en.wikipedia.org/wiki/Reader_(academic_rank)">Reader</a><br/> -->
-        <a>Computer Science</a><br/>
-        <a href="http://https://www.nju.edu.cn/EN/7f/6b/c7136a163691/page.htm">Department of Computer Science and Technology</a><br/>
-        <a href="https://www.nju.edu.cn/EN/main.htm">Nanjing University</a><br/>
+        <!-- <a>Computer Science</a><br/> -->
+        <!-- <a href="http://https://www.nju.edu.cn/EN/7f/6b/c7136a163691/page.htm">Department of Computer Science and Technology</a><br/> -->
+        UCLA, Los Angeles, CA, 90024<br/>
       </address>
     </div>
     <div class="col-sm-4">
       <a><span class="glyphicon glyphicon-envelope"></span></a> dyp1225@ucla.edu<br/>
-      <a><span class="glyphicon glyphicon-envelope"></span></a> yunpengding.ln@gmail.com<br/>
+      <a><span class="glyphicon glyphicon-plus"></span></a> https://www.linkedin.com/in/yunpeng-ding-147745161<br/>
       <!-- <a href="tel:+44-1316504430"><span class="glyphicon glyphicon-phone"></span>+44 131 650 4430</a><br/> -->
       <!-- <a href="http://scholar.google.com/citations?user=u4sxKZwAAAAJ"> -->
         <!-- <img src="img/ico/gs.png" alt=""/> -->
