--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ picture: me
     </div>
     <div class="col-sm-4">
       <a><span class="glyphicon glyphicon-envelope"></span></a> dyp1225@ucla.edu<br/>
-      <a><span class="glyphicon glyphicon-plus"></span></a> https://www.linkedin.com/in/yunpeng-ding-147745161<br/>
+      <a href="https://www.linkedin.com/in/yunpeng-ding-147745161"><span class="glyphicon glyphicon-plus"></span></a> LinkedIn: Yunpeng Ding<br/>
       <!-- <a href="tel:+44-1316504430"><span class="glyphicon glyphicon-phone"></span>+44 131 650 4430</a><br/> -->
       <!-- <a href="http://scholar.google.com/citations?user=u4sxKZwAAAAJ"> -->
         <!-- <img src="img/ico/gs.png" alt=""/> -->
