--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ picture: me
         <!-- <a href="https://en.wikipedia.org/wiki/Reader_(academic_rank)">Reader</a><br/> -->
         <!-- <a>Computer Science</a><br/> -->
         <!-- <a href="http://https://www.nju.edu.cn/EN/7f/6b/c7136a163691/page.htm">Department of Computer Science and Technology</a><br/> -->
-        UCLA, Los Angeles, CA, 90024<br/>
+        UCLA <br> Los Angeles, CA, 90024<br/>
       </address>
     </div>
     <div class="col-sm-4">
@@ -46,7 +46,6 @@ picture: me
 
 Welcome!<br>
 I am currently a 1st year graduate student at UCLA, majoring in M.S. of Electrical & Computer Engineering.
-Previously, I got the degree of B.S. in Computer Science at Nanjing University (NJU). 
 
 <h4>Education Background</h4>
 09/2019 - 06/2021 (expected) <br>
