--- a/index.html
+++ b/index.html
@@ -54,13 +54,25 @@ I am currently a 1st year graduate student at UCLA, majoring in M.S. of Electric
 09/2014 - 06/2019 <br>
 <B>B.S. in Computer Science, Department of Computer Science and Technology, Nanjing University</B><br>
 
+<h4>News</h4>
+&bull; Ritam Sarmah, <b>Yunpeng Ding</b>, Di Wang, Cheuk Yin Phipson Lee, Toby Jia-Jun Li, Xiang ‘Anthony’ Chen.
+Geno: A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications. Proc. ACM
+UIST 2020. Acceptance Rate: 21%. <br>
+
 <br>
 
+<h4>Professional Experience</h4>
+06/2020 - Present<br>
+<B>Salesforce.com, Inc </B>
+Software Engineer Intern <br>
+Working on Search indexing <br>
+
 <h4>Research Experience</h4>
-12/2018 - 01/2019, 09/2019 - Present<br>
+12/2018 - 01/2019, 09/2019 - 05/2020<br>
 <B>UCLA HCI Research</B> <br>
-Geno: Enhancing web accessibility with auto-generated voice input <br>
+Geno: A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications <br>
 Advisor: Prof. Xiang Chen<br>
+
 
 <br>
 03/2019 - 05/2019<br>
@@ -83,9 +95,6 @@ Advisor: Prof. Yanwen Guo<br>
 
 
 <br>
-
-<!-- <h4>News</h4>
-&bull; One paper accepted by WASA 2018! <br> -->
 
 
 <h4>Publications</h4>
