--- a/index.html
+++ b/index.html
@@ -48,11 +48,15 @@ Welcome!<br>
 I am currently a 1st year graduate student at UCLA, majoring in M.S. of Electrical & Computer Engineering.
 
 <h4>Education Background</h4>
-09/2019 - 06/2021 (expected) <br>
-<B>M.S. in Electrical & Computer Engineering, Department of Electrical & Computer Engineering, University of California, Los Angeles</B><br>
+09/2019 - 03/2021 Exp <br>
+<b>University of California, Los Angeles</b> <br>
+<i>M.S. in Electrical & Computer Engineering, Department of Electrical & Computer Engineering, </i><br>
 
 09/2014 - 06/2019 <br>
-<B>B.S. in Computer Science, Department of Computer Science and Technology, Nanjing University</B><br>
+<b>Nanjing University</b> <br>
+<i>B.S. in Computer Science, Department of Computer Science and Technology</i><br>
+
+<br>
 
 <h4>News</h4>
 &bull; Ritam Sarmah, <b>Yunpeng Ding</b>, Di Wang, Cheuk Yin Phipson Lee, Toby Jia-Jun Li, Xiang ‘Anthony’ Chen.
