--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ UIST 2020. Acceptance Rate: 21%. <br>
 
 <h4>Professional Experience</h4>
 06/2020 - Present<br>
-<B>Salesforce.com, Inc </B>
+<B>Salesforce.com, Inc </B> <br>
 Software Engineer Intern <br>
 Working on Search indexing <br>
 
