--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@ I am currently a 1st year graduate student at UCLA, majoring in M.S. of Electric
 <b>University of California, Los Angeles</b> <br>
 <i>M.S. in Electrical & Computer Engineering, Department of Electrical & Computer Engineering, </i><br>
 
+<br>
+
 09/2014 - 06/2019 <br>
 <b>Nanjing University</b> <br>
 <i>B.S. in Computer Science, Department of Computer Science and Technology</i><br>
@@ -60,7 +62,7 @@ I am currently a 1st year graduate student at UCLA, majoring in M.S. of Electric
 
 <h4>News</h4>
 &bull; Ritam Sarmah, <b>Yunpeng Ding</b>, Di Wang, Cheuk Yin Phipson Lee, Toby Jia-Jun Li, Xiang ‘Anthony’ Chen.
-Geno: A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications. Proc. ACM
+<i>Geno: A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications.</i> Proc. ACM
 UIST 2020. Acceptance Rate: 21%. <br>
 
 <br>
