--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ UIST 2020. Acceptance Rate: 21%. <br>
 06/2020 - Present<br>
 <B>Salesforce.com, Inc </B> <br>
 Software Engineer Intern <br>
-Working on Search indexing <br>
+<!-- Working on Search indexing <br> -->
 
 <br>
 
