--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@ I am currently a 1st year graduate student at UCLA, majoring in M.S. of Electric
 <b>Nanjing University</b> <br>
 <i>B.S. in Computer Science, Department of Computer Science and Technology</i><br>
 
-<br>
+<!-- <br>
 
 <h4>News</h4>
 &bull; Ritam Sarmah, <b>Yunpeng Ding</b>, Di Wang, Cheuk Yin Phipson Lee, Toby Jia-Jun Li, Xiang ‘Anthony’ Chen.
 <i>Geno: A Developer Tool for Authoring Multimodal Interaction on Existing Web Applications.</i> Proc. ACM
-UIST 2020. Acceptance Rate: 21%. <br>
+UIST 2020. Acceptance Rate: 21%. <br> -->
 
 <br>
 
